--- a/Games/menu.html
+++ b/Games/menu.html
@@ -10,7 +10,7 @@
     
     <!-- Include individual CSS files for each game if needed -->
     <link rel="stylesheet" href="Games/snake/stylessnake.css">
-    <link rel="stylesheet" href="Games/frogger/styles1_UpFrogger.css">
+    <link rel="stylesheet" href="Games/1_UpFrogger/styles1_UpFrogger.css">
     <link rel="stylesheet" href="Games/venture/stylesventure.css">
     <link rel="stylesheet" href="Games/rpsls/stylesrpsls.css">
 </head>
@@ -19,13 +19,13 @@
     
     <!-- Buttons to run each game -->
     <button onclick="runSnakeGame()">Run Snake Game</button>
-    <button onclick="runFroggerGame()">Run Frogger Game</button>
+    <button onclick="run1UpFroggerGame()">Run 1Up Frogger Game</button>
     <button onclick="runVentureGame()">Run Venture Game</button>
     <button onclick="runRpslsGame()">Run RPSLS Game</button>
 
     <!-- Link to each game's JavaScript file -->
     <script src="Games/snake/snake.js"></script>
-    <script src="Games/frogger/1_UpFrogger.js"></script>
+    <script src="Games/1_UpFrogger/1_UpFrogger.js"></script>
     <script src="Games/venture/venture.js"></script>
     <script src="Games/rpsls/rpsls.js"></script>
 
